force-app/main/default/objects/SmartSync_Integration_Endpoint__mdt/SmartSync_Integration_Endpoint__mdt.object-meta.xml
<CustomObject>
    <label>SmartSync Integration Endpoint</label>
    <pluralLabel>SmartSync Integration Endpoints</pluralLabel>
</CustomObject>