force-app/main/default/objects/SmartSync_Integration_Endpoint__mdt/fields/limit__c.field-meta.xml
<CustomField>
    <fullName>limit__c</fullName>
    <label>limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>