force-app/main/default/objects/SmartSync_Integration_Endpoint__mdt/fields/offset__c.field-meta.xml
<CustomField>
    <fullName>offset__c</fullName>
    <label>offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>