force-app/main/default/objects/SmartSync_Integration_Endpoint__mdt/fields/orderby__c.field-meta.xml
<CustomField>
    <fullName>orderby__c</fullName>
    <label>orderby</label>
    <length>255</length>
    <type>Text</type>
</CustomField>