force-app/main/default/objects/SmartSync_Integration_Endpoint__mdt/fields/Synch_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Synch_Endpoint__c</fullName>
    <label>Synch Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>